@@ -133,35 +133,35 @@ textarea {
 }
 .message-notice {
 	background-image: url("../../../gfx/notice.png");
-	background-color: #fff;
-	border-color: #dee0e1;
+	background-color: #f6f7fa;
+	border-color: #c2cbcf;
 }
 .message-information {
 	background-image: url("../../../gfx/information.png");
-	background-color: #dfedf8;
-	border-color: #bccfe4;
+	background-color: #ddeef9;
+	border-color: #8aafc4;
 }
 .message-ok {
 	background-image: url("../../../gfx/ok.png");
-	background-color: #dfd;
-	border-color: #beb;
+	background-color: #cdeaca;
+	border-color: #58b548;
 }
 .message-warning {
 	background-image: url("../../../gfx/warning.png");
-	background-color: #ffd;
-	border-color: #f6ea68;
+	background-color: #fbffb3;
+	border-color: #c4b70d;
 }
 .message-error {
 	background-image: url("../../../gfx/error.png");
-	background-color: #fcc;
-	border-color: #ebb;
+	background-color: #fbb19b;
+	border-color: #dc4c42;
 }
 /* Colors to match above message styles, but without the icon in the background */
 .warning {
-	background-color: #ffd;
+	background-color: #fbffb3;
 }
 .notice {
-	background-color: #fff;
+	background-color: #f6f7fa;
 }
 
 
